--- a/index.html
+++ b/index.html
@@ -1,379 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Free and open source server providing code assistance for PHP">
-
-    <meta property="og:title" content="Serenata">
-    <meta name="description" content="Free and open source server providing code assistance for PHP">
-    <meta property="og:description" content="Free and open source server providing code assistance for PHP">
-    <link rel="canonical" href="https://php-integrator.github.io/">
-    <meta property="og:url" content="https://php-integrator.github.io/">
-    <meta property="og:site_name" content="Serenata">
-    <meta property="og:image" content="https://php-integrator.github.io/images/logo.png">
-    <script type="application/ld+json">
-      {
-        "@context": "http://schema.org",
-        "@type": "WebSite",
-        "name": "Serenata",
-        "headline": "Serenata",
-        "image": "https://php-integrator.github.io/images/logo.png",
-        "description": "Free and open source server providing code assistance for PHP",
-        "logo": "https://php-integrator.github.io/images/logo.png",
-        "url": "https://php-integrator.github.io/"
-      }
-    </script>
-
-    <title>Serenata</title>
-
-    <link rel="icon" href="images/logo.png">
-
-    <style type="text/css">
-        * {
-            margin: 0;
-        }
-
-        body {
-            font-family: sans-serif;
-            font-size: 18px;
-            color: #333333;
-            background-color: white;
-        }
-
-        h1, h2, h3, h4 {
-            line-height: 1.2;
-            margin-top: 1.5em;
-        }
-
-        h2:before {
-            content: ' ⁓ ';
-        }
-
-        p {
-            line-height: 1.5;
-            margin-top: 1.5em;
-        }
-
-        ul li, ol li {
-            line-height: 1.7;
-        }
-
-        a {
-            color: #333333;
-        }
-
-        ul, ol {
-            margin-top: 15px;
-        }
-
-        a:hover {
-            text-decoration: none;
-        }
-
-        .content {
-            max-width: 952px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 50px;
-
-            animation: fadeIn 0.5s 1;
-        }
-
-        .title {
-            margin-top: 15px;
-        }
-
-        .left {
-            order: 1;
-            flex: 0 0 50%;
-        }
-
-        .right {
-            order: 2;
-            flex: 0 0 50%;
-        }
-
-        .left p, .left h3 {
-            padding-right: 50px;
-        }
-
-        .right p, .right h3 {
-            padding-left: 50px;
-        }
-
-        .left img, .right img {
-            width: 100%;
-        }
-
-        .row {
-            display: inline-flex;
-
-            margin-top: 25px;
-        }
-
-        .center {
-            text-align: center;
-        }
-
-        .small-text {
-            font-size: 13px;
-        }
-
-        .bottom-bar {
-            padding: 10px;
-            color: #444444;
-            background-color: #ddd;
-        }
-
-        @keyframes fadeIn {
-           0%   { opacity: 0; margin-top: 25px; }
-           100% { opacity: 1; margin-top: 50px; }
-        }
-    </style>
+    <meta http-equiv="refresh" content="0; url=https://serenata.gitlab.io/" />
 </head>
 
 <body>
-    <a href="https://gitlab.com/Serenata/Serenata" class="github-corner" aria-label="View source"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+    <p>
+        Hi! We've <a href="https://serenata.gitlab.io/">moved to GitLab</a>, please update your bookmarks.
+    </p>
 
-    <div class="content">
-        <div class="center">
-            <img src="images/logo.png" alt="Logo" />
-        </div>
-
-        <h1 id="title" class="title center">Serenata</h1>
-
-        <div class="center">
-            <em>Free and open source server providing code assistance for PHP</em>
-
-            <div class="small-text">
-                <a href="https://gitlab.com/Serenata/Serenata">Show me the source</a>
-            </div>
-        </div>
-
-        <p>
-            Serenata is a free and open source server that provides code assistance for PHP. It can be integrated
-            into any editor and is already integrated into the <a href="https://www.atom.io">Atom editor</a> via
-            the <a href="https://github.com/Gert-dev/php-ide-serenata/">php-ide-serenata</a> package.
-        </p>
-
-        <div class="row">
-            <div class="right">
-                <img src="images/autocompletion.png" />
-            </div>
-
-            <div class="left">
-                <h3 id="autocompletion">Autocompletion</h3>
-                <p>
-                    One of the most useful features in a programmer's toolbox is autocompletion, which suggests:
-                </p>
-
-                <ul>
-                    <li>Relevant object class members</li>
-                    <li>Global functions and constants</li>
-                    <li>Local variables</li>
-                    <li>...</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="left">
-                <img src="images/code-navigation.png" />
-            </div>
-
-            <div class="right">
-                <h3 id="code-navigation">Code Navigation / Goto Definition</h3>
-                <p>
-                    Code navigation allows you to effortlessly travel through your codebase by clicking the names
-                    of method calls, classes, interfaces, and other structural elements.
-                </p>
-
-                <p>
-                    Navigating will immediately take you to the relevant location in your code base.
-                </p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="right">
-                <img src="images/annotations.png" />
-            </div>
-
-            <div class="left">
-                <h3 id="annotations">Annotations</h3>
-                <p>
-                    Annotations provide you with relevant information about your code, such as that a parent property is
-                    being overridden or an interface method is being implemented.
-                </p>
-
-                <p>
-                    As an added bonus, clicking them will take you to the related element, whenever possible.
-                </p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="left">
-                <img src="images/tooltips.png" />
-            </div>
-
-            <div class="right">
-                <h3 id="tooltips">Tooltips</h3>
-                <p>
-                    Tooltips display documentation for structural elements. Think extended docblock descriptions,
-                    method parameter descriptions, return type descriptions and exceptions thrown.
-                </p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="right">
-                <img src="images/refactoring.png" />
-            </div>
-
-            <div class="left">
-                <h3 id="refactoring">Refactoring</h3>
-                <p>
-                    Refactoring is the component that has the most potential. Features currently include:
-                </p>
-
-                <ul>
-                    <li>Generating constructors</li>
-                    <li>Overriding existing methods</li>
-                    <li>Getter and setter generation</li>
-                    <li>Stubbing interface methods and abstract methods</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="left">
-                <img src="images/signature-help.png" />
-            </div>
-
-            <div class="right">
-                <h3 id="signature-help">Signature Help (Call Tips)</h3>
-                <p>
-                    Signature help is much like tooltips, but differs only in that it displays information directly
-                    relevant to function or method calls, such as their expected arguments with their types and default
-                    values.
-                </p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="right">
-                <img src="images/linting.png" />
-            </div>
-
-            <div class="left">
-                <h3 id="linting">Linting</h3>
-                <p>
-                    The list wouldn't be complete without a way to highlight errors before stumbling upon them whilst
-                    running the code. Finding nonexistent class names, docblock issues and missing global functions are
-                    all included in this process.
-                </p>
-            </div>
-        </div>
-
-        <div class="row">&nbsp;</div>
-
-        <h2 id="what-do-i-need">Awesome! What do I need?</h2>
-        <p>
-            To run, you will need at least:
-        </p>
-
-        <ul>
-            <li><em>PHP 7.1 or higher <sup>*</sup></em> &mdash; The code you're actually writing can be anything ranging from PHP 5.2 up to (and including) PHP 7.1.</li>
-            <li><em>php-sqlite (the PDO variant) and SQLite >= 3.7.11</em> &mdash; Required as back end for the indexing database.</li>
-            <li><em>php-mbstring</em> &mdash; Required as source code can contain Unicode characters in strings or comments.</li>
-            <li><em>openssl</em> &mdash; Required to fetch dependencies properly via Composer.</li>
-            <li><em><a href="https://github.com/danielbrodin/atom-project-manager">atom-project-manager</a></em> &mdash; Fire up your active project and go to <em>Packages &rarr; Serenata &rarr; Set Up Current Project</em> (or use the command palette).</li>
-            <li><em>Proper docblocks and type hinting</em> - See <a href="https://gitlab.com/Serenata/Serenata/wikis">our wiki</a> for more information.</li>
-        </ul>
-
-        <p>
-            The following modules aren't directly used, but they may be required for installation in Atom via Composer or by dependencies:
-        </p>
-
-        <ul>
-            <li><em>curl</em></li>
-            <li><em>xml</em></li>
-            <li><em>libxml</em></li>
-            <li><em>dom</em></li>
-        </ul>
-
-        <p class="small-text">
-            <sup>*</sup> Not running PHP 7.1 yet? The latest version of the Atom package provides support for running
-            through Docker, so no need to update your host PHP version!
-        </p>
-
-        <h2 id="how-do-i-make-it-work">How do I make it work?</h2>
-        <p>
-            In a nutshell:
-        </p>
-
-        <ol>
-            <li>Install <em>PHP 7.1 or higher</em>.</li>
-            <li>In <code>php.ini</code>, enable the extensions <em>mbstring, openssl</em> and <em>sqlite (the PDO variant)</em>.</li>
-            <li>In Atom editor, install the <a href="https://atom.io/packages/Gert-dev/php-ide-serenata">php-ide-serenata</a> package and its dependencies.</li>
-            <li>If necessary, give the path to your PHP binary in <em>Settings &rarr; Packages &rarr; php-ide-serenata Settings &rarr; Core</em>.</li>
-            <li>Restart Atom and allow the base package to install the core.</li>
-            <li>Add your project in <em>Project Manager</em> and set it up.</li>
-        </ol>
-
-        <p>
-            It may also be worthwile to disable xdebug, if you have it enabled, as
-            <a href="https://github.com/nikic/PHP-Parser/blob/master/doc/component/Performance.markdown#xdebug" target="blank" rel="noopener">
-            even loading it</a> can have a negative impact on performance.
-        </p>
-
-        <h2 id="what-is-it-really">Wait, now I'm confused, what is it really?</h2>
-        <p>
-            At the moment, Serenata itself consists of a set of Atom packages written in CoffeeScript, backed by
-            a server written in PHP (the core). The PHP server is separate from the Atom packages and reusable, but is
-            installed automatically to make the process of installing it as painless as possible for Atom users.
-        </p>
-
-        <p>
-            Various additional functionalities, such as autocompletion and refactoring, can be installed as separate
-            Atom packages as well. These packages interface with the base package via a CoffeeScript service. Most of
-            the heavy lifting, such as indexing, analyzing types and static analysis is done by the PHP server.
-        </p>
-
-        <h2 id="is-it-really-exclusive-to-atom">Is it really exclusive to Atom?</h2>
-        <p>
-            The packages and CoffeeScript parts are dependent on Atom, but the PHP server, which does the heavy lifting,
-            is not dependent on Atom at all. The PHP server was originally part of the base Atom package, but
-            <a href="https://gitlab.com/Serenata/Serenata">has since been split off into a separate repository</a>.
-        </p>
-
-        <h2 id="what-about-making-it-a-language-server">What about making it a language server?</h2>
-        <p>
-            The Language Server Protocol has gathered some interest of late. Currently the core is not a compliant
-            language server, but it already is a socket server using JSON-RPC for communication. Becoming compliant with
-            the protocol is on the roadmap and would make the core much more reusable for other editors.
-        </p>
-
-        <h2 id="where-is-the-code">Where is the code?</h2>
-        <p>
-            The core is <a href="https://gitlab.com/Serenata/Serenata">on GitLab</a> and
-            the Atom package <a href="https://github.com/Gert-dev/php-ide-serenata/">on GitHub</a>.
-        </p>
-
-        <p class="center">
-            <img src="images/gplv3-127x51.png" alt="GPLv3 Logo" />
-        </p>
-    </div>
-
-    <br>
-
-    <div id="bottom-bar" class="bottom-bar">
-        <div id="donations" class="small-text center">
-            <strong><a target="blank" rel="noopener" href="https://liberapay.com/Gert-dev/donate">Feed me some coffee beans</a></strong>
-            to keep it (me) alive!
-        </div>
-    </div>
+    <p>
+        This page should redirect automatically.
+    </p>
 </body>
